Added some Func